unpackaged/objects/copadovsm__Stage__c.object
<CustomObject>
	<fields>
		<fullName>copadovsm__Active__c</fullName>
		<defaultValue>true</defaultValue>
		<description>Will be updated to false before event eraser batch execution to not to show deleted to be stages on the UI level.</description>
		<label>Active</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copadovsm__Description__c</fullName>
		<inlineHelpText>A brief description of the Stage.</inlineHelpText>
		<label>Description</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>copadovsm__Order__c</fullName>
		<defaultValue>1</defaultValue>
		<inlineHelpText>Order of Stages in the Value Stream Map.</inlineHelpText>
		<label>Order</label>
		<precision>2</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copadovsm__Value_Stream_Map__c</fullName>
		<label>Value Stream Map</label>
		<referenceTo>copadovsm__Value_Stream_Map__c</referenceTo>
		<relationshipLabel>Stages</relationshipLabel>
		<relationshipName>Stages</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<reparentableMasterDetail>true</reparentableMasterDetail>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copadovsm__Waiting_Criteria__c</fullName>
		<inlineHelpText>Values that indicate work “to do” or “completed” should be considered “waiting”. These will be configured from the Primary Field that is selected on the VSM.</inlineHelpText>
		<label>Waiting Criteria</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadovsm__Waiting_Time_Threshold_Type__c</fullName>
		<label>Waiting Time Threshold Type</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Lower Threshold</fullName>
				</value>
				<value>
					<fullName>Upper Threshold</fullName>
					<default>true</default>
					<label>Upper Threshold</label>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copadovsm__Waiting_Time_Threshold__c</fullName>
		<label>Waiting Time Threshold</label>
		<precision>7</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<label>Stage</label>
	<nameField>
		<label>Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Stages</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>